A new version of My Tester is out, it is only for PHP 8.3 and later. Now only first assertion failure in a test method is reported, following ones are not performed. Output of results formatter TextDox in console was improved.

For complete list of changes since previous version, see CHANGELOG.md.